--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,35 @@
-# Node
+# dependencies
 node_modules/
-npm-debug.log
-yarn-error.log
 
-# Expo & EAS
+# expo
 .expo/
-.expo-shared/
 dist/
 web-build/
-build/
-*.tar.gz
+expo-env.d.ts
 
-# macOS / system
+# native
+*.orig.*
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
+
+# metro
+.metro-health-check*
+
+# debug
+npm-debug.*
+yarn-debug.*
+yarn-error.*
+
+# macos
 .DS_Store
-.idea/
-.vscode/
-.env
-.env.local
+*.pem
 
-# Temporary
-*.log
-*.tmp
+# local env files
+.env*.local
+.env
+
+# typescript
+*.tsbuildinfo
