--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
+    "expo-updates": "~29.0.12",
     "expo-web-browser": "~15.0.7",
     "firebase": "^12.5.0",
     "lucide-react-native": "^0.544.0",
